--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "baseUrl": "/Users/whitmore/dev/astro-dashboard",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["src/*"]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
