--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "baseUrl": "/Users/whitmore/dev/astro-dashboard",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
     },
